--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "n8n-nodes-<...>",
   "version": "0.1.0",
-  "description": "",
+  "description": "Set of tools to parse/format or serialize/deserialize data for JSON API Specification",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Popa Daniel",
+    "email": "popa.daniel@agilefreaks.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/Agilefreaks/n8n-nodes-kafka-ssl"
   },
   "engines": {
     "node": ">=20.15"
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.17.9",
     "@typescript-eslint/parser": "~8.32.0",
     "eslint": "^8.57.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
