Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-json-api-spec",
   "version": "0.1.0",
   "description": "Set of tools to parse/format or serialize/deserialize data for JSON API Specification",
   "keywords": [
