--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp": "^5.0.0",
     "jest": "^30.2.0",
     "prettier": "^3.5.3",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.4.4",
     "typescript": "^5.8.2"
   },
